update: fix image cropping and remove product color block

--- a/src/app/products/[handle]/unit.css
+++ b/src/app/products/[handle]/unit.css
@@ -38,6 +38,10 @@
   will-change: transform;
 }
 
+.product-snapshots .product-snapshot img {
+  object-position: top center;
+}
+
 .product-spotlight {
   position: relative;
   width: 100%;
