--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -123,7 +123,15 @@
 
 @media (max-width: 1000px) {
   .contact-form {
-    height: calc(80svh + 80svh);
+    height: calc(50svh + 80svh);
+  }
+
+  .contact-form .contact-parallax-image-wrapper {
+    height: 50svh;
+  }
+
+  .contact-form .contact-parallax-image-wrapper img {
+    object-position: center center;
   }
 
   .contact-form .cf-header,
@@ -136,7 +144,7 @@
   }
 
   .contact-form .contact-form-container {
-    top: 80svh;
+    top: 50svh;
     border-radius: 0;
     width: 100%;
     right: 0;
